--- a/aoc2021.cabal
+++ b/aoc2021.cabal
@@ -26,6 +26,7 @@ library advent
   other-modules:
     Advent.Day1
     Advent.Day2
+    Advent.Day3
     Advent.Prelude
   default-extensions: 
     NoImplicitPrelude,
