--- a/aoc2021.cabal
+++ b/aoc2021.cabal
@@ -27,6 +27,7 @@ library advent
     Advent.Day1
     Advent.Day2
     Advent.Day3
+    Advent.Day4
     Advent.Prelude
   default-extensions: 
     NoImplicitPrelude,
