--- a/aoc2021.cabal
+++ b/aoc2021.cabal
@@ -32,6 +32,7 @@ library advent
     Advent.Day4
     Advent.Day5
     Advent.Day6
+    Advent.Day7
   default-extensions: 
     NoImplicitPrelude,
     OverloadedStrings
