--- a/aoc2021.cabal
+++ b/aoc2021.cabal
@@ -33,6 +33,7 @@ library advent
     Advent.Day5
     Advent.Day6
     Advent.Day7
+    Advent.Day8
   default-extensions: 
     NoImplicitPrelude,
     OverloadedStrings
