--- a/aoc2021.cabal
+++ b/aoc2021.cabal
@@ -34,6 +34,7 @@ library advent
     Advent.Day6
     Advent.Day7
     Advent.Day8
+    Advent.Day9
   default-extensions: 
     NoImplicitPrelude,
     OverloadedStrings
