--- a/aoc2021.cabal
+++ b/aoc2021.cabal
@@ -35,6 +35,7 @@ library advent
     Advent.Day7
     Advent.Day8
     Advent.Day9
+    Advent.Day10
   default-extensions: 
     NoImplicitPrelude,
     OverloadedStrings
